# FNI-AI-LLM

./: .gitignore  PROJECT_SUMMARY.md  README.md  app.py  colab_utils.py  config.ini  init_project.bat  llm_roadmap.md  logging.ini  pyproject.toml  pytest.ini  requirements.txt  setup.bat
data/cameroon_languages/: README.md
data/cameroon_languages/bayangi/: vocab.json
data/cameroon_languages/douala/: vocab.json
data/cameroon_languages/english/: vocab.json
data/cameroon_languages/french/: vocab.json
data/chat_logs/: 20260422_142030.json  20260422_142054.json  20260422_144012.json  20260422_144024.json  20260422_144035.json  20260422_144052.json  20260422_144109.json  20260423_010356.json
data/processed/: vocab.json
docs/: SETUP.md
logs/: english_colab_training.json  english_training.json  english_v3_training.json  english_v4_training.json  french_colab_training.json
models/checkpoints/english/: english_epoch1.pkl
notebooks/: FNI_LLM_Training.ipynb  README.md
scripts/: dev.bat  dev.sh
src/year1/: 01_python_basics.py  02_control_flow.py  03_functions.py  04_data_structures.py  05_oop.py  06_linear_algebra.py  07_numpy_basics.py  08_calculus_basics.py  main.py
src/year1/chat/: logger.py  nn_chat.py  simple_chat.py  streamlit_app.py
src/year1/neural_network/: activations.py  backprop.py  batch_training.py  layers.py  loss.py  network.py  neuron.py  performance.py
src/year1/utils/: __init__.py  colab_utils.py
src/year2/chat/: conversation.py  generation.py  (+3 more)
src/year3/: model_loader.py
tests/: test_environment.py  test_main.py  test_utils.py
(+35 files in other folders)
